one shot manifest for part 1

--- a/pas.config
+++ b/pas.config
@@ -3,12 +3,8 @@
 # pas_services_*
 # ==================================================================
 pas_service_redis="rediscloud"
-pas_service_redis_plan="30mb"
+pas_service_redis_plan="100mb"
 pas_service_rabbitmq="cloudamqp"
-pas_service_rabbitmq_plan="lemur"
+pas_service_rabbitmq_plan="bunny"
 pas_service_mysql="cleardb"
-pas_service_mysql_plan="spark"
-# pas_service_config_server="p-config-server"
-# pas_service_config_server="trial"
-# pas_service_service_registry="p-service-registry"
-# pas_service_service_registry="trial"
+pas_service_mysql_plan="boost"
